--- a/public/Admin.html
+++ b/public/Admin.html
@@ -11,7 +11,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="css/estyle.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -31,7 +31,7 @@
             <th scope="col">Estado</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="tbody">
           <tr>
             <th scope="row">1</th>
             <td><div></div></td>
@@ -59,5 +59,73 @@
         </tbody>
       </table>
     </div>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"
+      integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <script>
+      const tbody = document.querySelector("#tbody");
+
+      const getUsers = async () => {
+        try {
+          const { data } = await axios.get("/skaters/users");
+          return data.users;
+        } catch (error) {
+          console.error(error);
+        }
+      };
+
+      const checkboxListeners = async () => {
+        const users = await getUsers();
+        users.forEach((user) => {
+          const myCheckbox = document.querySelector(
+            `#${user.email.substring(0, user.email.indexOf("@"))}-checkbox`
+          );
+          myCheckbox.addEventListener("change", async (e) => {
+            const isChecked = e.target.checked;
+            try {
+              console.log({
+                email: user.email,
+                state: isChecked,
+              })
+              await axios.put("/skaters/state", {
+                email: user.email,
+                state: isChecked,
+              });
+              console.log(`Estado de ${user.nombre} actualizado: ${isChecked}`);
+            } catch (error) {
+              console.error(error);
+            }
+          });
+        });
+      };
+
+      document.addEventListener("DOMContentLoaded", async () => {
+        try {
+          const users = await getUsers();
+          tbody.innerHTML = "";
+          users.forEach((user) => {
+            tbody.innerHTML += `
+              <tr>
+              <th scope="row">${user.id}</th>
+              <td><div style="background-image: url('../imgs/${
+                user.foto
+              }');"></div></td>
+              <td>${user.nombre}</td>
+              <td>${user.anos_experiencia}</td>
+              <td>${user.especialidad}</td>
+              <td><input id="${user.email.substring(0, user.email.indexOf("@"))}-checkbox" type="checkbox" ${user.estado ? "checked" : ""} /></td>
+              </tr>`;
+          });
+          checkboxListeners();
+        } catch (error) {
+          console.error(error);
+        }
+      });
+    </script>
   </body>
 </html>
