--- a/public/Registro.html
+++ b/public/Registro.html
@@ -11,7 +11,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="css/estyle.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -20,7 +20,7 @@
       <h2>Registro</h2>
       <hr class="w-50" />
 
-      <form>
+      <form id="registerForm">
         <div class="form-group row w-50 m-auto">
           <div class="form-group col-12 col-sm-6">
             <label>Email</label>
@@ -55,5 +55,62 @@
         <p><a href="#"> Iniciar sesión</a></p>
       </form>
     </div>
+
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"
+    integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+
+  <script>
+    const registerForm = document.querySelector("#registerForm");
+
+    registerForm.addEventListener("submit", async (e) => {
+      try {
+        e.preventDefault();
+
+        const email = e.target.email.value;
+        const password = e.target.password.value;
+        const r_password = e.target.r_password.value;
+        const name = e.target.name.value;
+        const anos_experiencia = e.target.anos_experiencia.value;
+        const especialidad = e.target.especialidad.value;
+        const foto = e.target.foto.value;
+
+        const formData = new FormData(registerForm);
+
+        if (
+          !email.trim() ||
+          !password.trim() ||
+          !r_password.trim() ||
+          !name.trim() ||
+          !anos_experiencia.trim() ||
+          !especialidad.trim() ||
+          !foto
+        ) {
+          alert("Faltan datos por ingresar en el formulario!");
+          throw { msg: "Faltan datos por ingresar en el formulario!" };
+        }
+
+        if (password != r_password) {
+          alert("La contraseña no coincide!");
+          throw { msg: "La contraseña no coincide!" };
+        }
+
+        const { data } = await axios.post("/skaters/register", formData, {
+          headers: { "Content-Type": "multipart/form-data" },
+        });
+
+        localStorage.setItem('email', email);
+
+        window.location.href = "/profile.html";
+      } catch (error) {
+        console.error(error.msg);
+        alert(error.msg);
+      }
+    });
+  </script>
+
   </body>
 </html>
