--- a/public/Admin.html
+++ b/public/Admin.html
@@ -11,7 +11,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/estyle.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Skate Park</h1>
@@ -112,7 +112,7 @@
             tbody.innerHTML += `
               <tr>
               <th scope="row">${user.id}</th>
-              <td><div style="background-image: url('../imgs/${
+              <td><div style="background-image: url('../img/${
                 user.foto
               }');"></div></td>
               <td>${user.nombre}</td>
