--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
             tbody.innerHTML += `
               <tr>
               <th scope="row">${u.id}</th>
-              <td><div style='background-image: url("../imgs/${u.foto}");'></div></td>
+              <td><div style='background-image: url("../img/${u.foto}");'></div></td>
               <td>${u.nombre}</td>
               <td>${u.anos_experiencia}</td>
               <td>${u.especialidad}</td>
