--- a/public/Registro.html
+++ b/public/Registro.html
@@ -104,7 +104,7 @@
 
         localStorage.setItem('email', email);
 
-        window.location.href = "/profile.html";
+        window.location.href = "/datos.html";
       } catch (error) {
         console.error(error.msg);
         alert(error.msg);
