--- a/public/Login.html
+++ b/public/Login.html
@@ -52,10 +52,10 @@
           const { data } = await axios.post('/skaters/login', { email, password});
           
           localStorage.setItem('email', email);
-          window.location.href='/datos.html';
+          window.location.href= "/datos.html";
 
         } catch (error) {
-          console.error(error);
+       //   console.error(error);
           alert(error);
         }
 
