--- a/public/index.html
+++ b/public/index.html
@@ -59,8 +59,8 @@
           </tr>
         </tbody>
       </table>
-      <a href="/Login.html">Iniciar Sesión</a> |
-      <a href="/Registro.html">Registrarme</a>
+      <a href="/login.html">Iniciar Sesión</a> |
+      <a href="/register.html">Registrarme</a>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js" integrity="sha512-JSCFHhKDilTRRXe9ak/FJ28dcpOJxzQaCd3Xg8MyF6XFjODhy/YMCM8HW0TFDckNHWUewW+kfvhin43hKtJxAw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -81,7 +81,7 @@
               <tr>
               <th scope="row">${u.id}</th>
               <td><div style='background-image: url("../img/${u.foto}");'></div></td>
-              <td>${u.nombre}</td>
+              <td>${u.name}</td>
               <td>${u.anos_experiencia}</td>
               <td>${u.especialidad}</td>
               ${ u.estado ? '<td class="text-success font-weight-bold">Aprobado</td>' : '<td class="text-warning font-weight-bold">En revisión</td>'}
