--- a/public/Datos.html
+++ b/public/Datos.html
@@ -18,38 +18,38 @@
     <h2>Datos del perfil</h2>
     <hr class="w-50" />
 
-    <form>
+    <form id="status-form">
       <div class="form-group row w-50 m-auto">
         <div class="form-group col-12 col-sm-6">
           <label>Email</label>
-          <input class="form-control m-auto" disabled value="tonyhawk@skate.com" />
+          <input  id="email" class="form-control m-auto" disabled value="tonyhawk@skate.com" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Nombre</label>
-          <input class="form-control m-auto" value="Tony Hawk" />
+          <input id="nombre" class="form-control m-auto" value="Tony Hawk" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Password</label>
-          <input type="password" class="form-control m-auto" value="12345678" />
+          <input id="password" type="password" class="form-control m-auto" value="12345678" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Repita la password</label>
-          <input type="password" class="form-control m-auto" value="12345678" />
+          <input id="passwordRep"type="password" class="form-control m-auto" value="12345678" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Años de experiencia</label>
-          <input class="form-control m-auto" value="12" />
+          <input id="anos_experiencia" class="form-control m-auto" value="12" />
         </div>
         <div class="form-group col-12 col-sm-6">
           <label>Especialidad</label>
-          <input class="form-control m-auto" value="Kickflip" />
+          <input id="especialidad" class="form-control m-auto" value="Kickflip" />
         </div>
       </div>
       <div class="mb-1">
-        <button class="btn btn-primary">Actualizar</button>
+        <button id="update" class="btn btn-primary">Actualizar</button>
       </div>
       <div>
-        <button class="btn btn-danger">Eliminar cuenta</button>
+        <button id="delete" class="btn btn-danger">Eliminar cuenta</button>
       </div>
     </form>
   </div>
@@ -61,21 +61,31 @@
 
   <script>
 
-    const tbody = document.querySelector('#tbody');
+   const emailSkater = document.querySelector('#email')
+   const nameSkater = document.querySelector('#nombre')
+   const passwordSkater= document.querySelector('#password')
+   const passwordRepSkater = document.querySelector('#passwordRep')
+   const experienciaSkater = document.querySelector('#anos_experiencia')
+   const especialidadSkater = document.querySelector('#especialidad')
+   const updateSkater = document.querySelector('#update')
+   const deleteSkater = document.querySelector('#delete')
+
+
 
     document.addEventListener('DOMContentLoaded', async () => {
       try {
 
-        const { data } = await axios.get('/skaters/users');
-        const users = data.users;
-        tbody.innerHTML = "";
-        users.forEach(u => {
+        const  data  = await axios.get('/protected');
+        if(!data.data.validToken){
+            window.location.href = '/login.html';
+            throw { msg: 'Token no encontrado!'}
+          }
 
           tbody.innerHTML += `
               <tr>
               <th scope="row">${u.id}</th>
               <td><div style='background-image: url("../img/${u.foto}");'></div></td>
-              <td>${u.nombre}</td>
+              <td>${u.name}</td>
               <td>${u.anos_experiencia}</td>
               <td>${u.especialidad}</td>
               ${u.estado ? '<td class="text-success font-weight-bold">Aprobado</td>' : '<td class="text-warning font-weight-bold">Procesando</td>'}
@@ -84,7 +94,7 @@
             `
 
 
-        })
+      
 
 
 
