--- a/public/Login.html
+++ b/public/Login.html
@@ -32,7 +32,7 @@
         </div>
       </div>
       <button class="btn btn-success mb-3">Ingresar</button>
-      <p>¿Aún no tienes cuenta? <a href="/register.html">Regístrate</a></p> <!-- Asegúrate de que esta URL sea correcta -->
+      <p>¿Aún no tienes cuenta? <a href="/register.html">Regístrate</a></p>
     </form>
   </div>
 
