--- a/public/register.html
+++ b/public/register.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <button class="btn btn-info mb-3">Registrarme</button>
-      <p><a href="#"> Iniciar sesión</a></p>
+      <p><a href="/login.html"> Iniciar sesión</a></p>
     </form>
   </div>
 
